--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Poker Trainer</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../imagenes/cards.png</normaloff>../imagenes/cards.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pbtSalir">
     <property name="geometry">
@@ -130,8 +134,8 @@
      <rect>
       <x>10</x>
       <y>210</y>
-      <width>570</width>
-      <height>180</height>
+      <width>430</width>
+      <height>175</height>
      </rect>
     </property>
     <property name="title">
@@ -141,8 +145,8 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
-       <width>550</width>
+       <y>15</y>
+       <width>410</width>
        <height>152</height>
       </rect>
      </property>
@@ -219,7 +223,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>571</width>
+      <width>570</width>
       <height>200</height>
      </rect>
     </property>
@@ -390,7 +394,7 @@
       <rect>
        <x>10</x>
        <y>180</y>
-       <width>320</width>
+       <width>325</width>
        <height>10</height>
       </rect>
      </property>
@@ -406,7 +410,7 @@
       <rect>
        <x>350</x>
        <y>180</y>
-       <width>90</width>
+       <width>95</width>
        <height>10</height>
       </rect>
      </property>
@@ -428,7 +432,7 @@
       <rect>
        <x>460</x>
        <y>180</y>
-       <width>90</width>
+       <width>100</width>
        <height>10</height>
       </rect>
      </property>
@@ -458,6 +462,210 @@
     <property name="shortcut">
      <string>J</string>
     </property>
+   </widget>
+   <widget class="QGroupBox" name="grbRevision">
+    <property name="geometry">
+     <rect>
+      <x>445</x>
+      <y>210</y>
+      <width>135</width>
+      <height>175</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Revisión</string>
+    </property>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>46</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Flop</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>46</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Turn</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>46</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>River</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton">
+     <property name="geometry">
+      <rect>
+       <x>55</x>
+       <y>50</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>45</x>
+       <y>15</y>
+       <width>31</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../imagenes/thumbs_up.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>15</y>
+       <width>31</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../imagenes/thumbs_down.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_2">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>50</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_3">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>70</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_4">
+     <property name="geometry">
+      <rect>
+       <x>55</x>
+       <y>70</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_5">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>90</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_6">
+     <property name="geometry">
+      <rect>
+       <x>55</x>
+       <y>90</y>
+       <width>16</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QDockWidget" name="dckJugadas">
