--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -502,6 +502,9 @@
     </property>
    </widget>
    <widget class="QGroupBox" name="grbRevision">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>445</x>
@@ -531,6 +534,9 @@
      <layout class="QGridLayout" name="gridLayout">
       <item row="1" column="0" alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="lblRevisionFlop">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="font">
          <font>
           <weight>50</weight>
@@ -544,6 +550,9 @@
       </item>
       <item row="2" column="0" alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="lblRevisionTurn">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="font">
          <font>
           <weight>50</weight>
@@ -557,6 +566,9 @@
       </item>
       <item row="3" column="0" alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="lblRevisionRiver">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="font">
          <font>
           <weight>50</weight>
@@ -716,6 +728,9 @@
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <widget class="QLabel" name="lblRevisionOk">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>20</width>
@@ -741,6 +756,9 @@
         </item>
         <item>
          <widget class="QLabel" name="lblRevisionNoOk">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>20</width>
