--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>823</width>
-    <height>473</height>
+    <height>479</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     <property name="geometry">
      <rect>
       <x>485</x>
-      <y>445</y>
+      <y>450</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -525,7 +525,7 @@
        <x>4</x>
        <y>20</y>
        <width>126</width>
-       <height>126</height>
+       <height>135</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -630,7 +630,7 @@
            <x>5</x>
            <y>0</y>
            <width>70</width>
-           <height>15</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -672,7 +672,7 @@
            <x>5</x>
            <y>0</y>
            <width>70</width>
-           <height>15</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -714,7 +714,7 @@
            <x>5</x>
            <y>0</y>
            <width>70</width>
-           <height>15</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
@@ -773,7 +773,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>160</y>
+       <y>165</y>
        <width>115</width>
        <height>13</height>
       </rect>
@@ -785,7 +785,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Porcentaje de acierto:</string>
+      <string>Aciertos (%)</string>
      </property>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_2">
@@ -936,7 +936,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>170</y>
+       <y>175</y>
        <width>115</width>
        <height>13</height>
       </rect>
@@ -956,7 +956,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>155</y>
+       <y>160</y>
        <width>120</width>
        <height>3</height>
       </rect>
@@ -999,7 +999,7 @@
        <x>10</x>
        <y>0</y>
        <width>220</width>
-       <height>440</height>
+       <height>450</height>
       </rect>
      </property>
      <property name="autoScroll">
