--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -802,6 +802,7 @@
        <widget class="QLabel" name="lblPorcentajeTurn">
         <property name="font">
          <font>
+          <pointsize>7</pointsize>
           <weight>50</weight>
           <bold>false</bold>
          </font>
@@ -818,6 +819,7 @@
        <widget class="QLabel" name="lblPorcentajeFlop">
         <property name="font">
          <font>
+          <pointsize>7</pointsize>
           <weight>50</weight>
           <bold>false</bold>
          </font>
@@ -851,6 +853,7 @@
        <widget class="QLabel" name="lblPorcentajeRiver">
         <property name="font">
          <font>
+          <pointsize>7</pointsize>
           <weight>50</weight>
           <bold>false</bold>
          </font>
@@ -867,6 +870,7 @@
        <widget class="QLabel" name="lblPorcentajeTotal">
         <property name="font">
          <font>
+          <pointsize>7</pointsize>
           <weight>50</weight>
           <bold>false</bold>
          </font>
@@ -932,7 +936,7 @@
       </item>
      </layout>
     </widget>
-    <widget class="QLabel" name="label_6">
+    <widget class="QLabel" name="lblNumeroRevisiones">
      <property name="geometry">
       <rect>
        <x>5</x>
@@ -949,7 +953,7 @@
       </font>
      </property>
      <property name="text">
-      <string>(sobre 23 revisiones)</string>
+      <string>(sobre 0 revisiones)</string>
      </property>
     </widget>
     <widget class="Line" name="line">
