--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>823</width>
+    <width>817</width>
     <height>479</height>
    </rect>
   </property>
@@ -970,40 +970,25 @@
      </property>
     </widget>
    </widget>
-  </widget>
-  <widget class="QDockWidget" name="dckJugadas">
-   <property name="minimumSize">
-    <size>
-     <width>240</width>
-     <height>157</height>
-    </size>
-   </property>
-   <property name="font">
-    <font>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="features">
-    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
-   </property>
-   <property name="allowedAreas">
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
-   </property>
-   <property name="windowTitle">
-    <string>Jugadas</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>2</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents">
+   <widget class="QGroupBox" name="grbJugadas">
+    <property name="geometry">
+     <rect>
+      <x>585</x>
+      <y>10</y>
+      <width>226</width>
+      <height>446</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Jugadas</string>
+    </property>
     <widget class="QListView" name="lsvJugadas">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>0</y>
+       <x>5</x>
+       <y>20</y>
        <width>220</width>
-       <height>450</height>
+       <height>415</height>
       </rect>
      </property>
      <property name="autoScroll">
