--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>817</width>
-    <height>479</height>
+    <width>813</width>
+    <height>497</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>813</width>
+    <height>497</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>813</width>
+    <height>497</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Poker Trainer</string>
@@ -17,38 +35,28 @@
    <iconset>
     <normaloff>../imagenes/cards.png</normaloff>../imagenes/cards.png</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pbtSalir">
-    <property name="geometry">
-     <rect>
-      <x>485</x>
-      <y>450</y>
-      <width>91</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>Salir (Esc)</string>
-    </property>
-    <property name="text">
-     <string>Salir</string>
-    </property>
-    <property name="shortcut">
-     <string>Esc</string>
-    </property>
-   </widget>
    <widget class="QWidget" name="layoutWidget_4">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>390</y>
-      <width>430</width>
-      <height>46</height>
+      <width>411</width>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridFuerzas">
      <item row="0" column="5">
       <widget class="QPushButton" name="pbtFuerza1">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>20</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Nada (G)</string>
        </property>
@@ -65,6 +73,12 @@
      </item>
      <item row="0" column="3">
       <widget class="QPushButton" name="pbtFuerza3">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>20</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Mano Media (D)</string>
        </property>
@@ -81,6 +95,12 @@
      </item>
      <item row="0" column="2">
       <widget class="QPushButton" name="pbtFuerza4">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>20</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Mano Fuerte (S)</string>
        </property>
@@ -97,6 +117,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="pbtFuerza5">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>20</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Mano Muy Fuerte (A)</string>
        </property>
@@ -113,6 +139,12 @@
      </item>
      <item row="0" column="4">
       <widget class="QPushButton" name="pbtFuerza2">
+       <property name="maximumSize">
+        <size>
+         <width>60</width>
+         <height>20</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Mano Débil (F)</string>
        </property>
@@ -516,6 +548,9 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="title">
      <string>Revisión</string>
     </property>
@@ -525,7 +560,7 @@
        <x>4</x>
        <y>20</y>
        <width>126</width>
-       <height>135</height>
+       <height>136</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -748,10 +783,17 @@
         </widget>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="4" column="1" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
        <widget class="QPushButton" name="pbtRevision">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
         <property name="font">
          <font>
+          <pointsize>8</pointsize>
           <weight>50</weight>
           <bold>false</bold>
          </font>
@@ -976,8 +1018,17 @@
       <x>585</x>
       <y>10</y>
       <width>226</width>
-      <height>446</height>
+      <height>461</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="title">
      <string>Jugadas</string>
@@ -987,9 +1038,15 @@
       <rect>
        <x>5</x>
        <y>20</y>
-       <width>220</width>
+       <width>215</width>
        <height>415</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="autoScroll">
       <bool>true</bool>
@@ -1007,7 +1064,70 @@
       <bool>false</bool>
      </property>
     </widget>
+    <widget class="QPushButton" name="pbtLimpiar">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>165</x>
+       <y>440</y>
+       <width>55</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>60</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Limpiar</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pbtGuardar">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>440</y>
+       <width>55</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>60</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Guardar</string>
+     </property>
+    </widget>
    </widget>
+  </widget>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="sizeGripEnabled">
+    <bool>false</bool>
+   </property>
   </widget>
  </widget>
  <tabstops>
@@ -1025,7 +1145,6 @@
   <tabstop>rdbRiverOk</tabstop>
   <tabstop>rdbRiverNoOk</tabstop>
   <tabstop>pbtRevision</tabstop>
-  <tabstop>pbtSalir</tabstop>
  </tabstops>
  <resources/>
  <connections/>
