Menú Jugadas desactivado y las señales de las acciones Guardar y Limpiar conectadas con sus correspondientes botones

--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -1145,6 +1145,9 @@
     <addaction name="actionSalir"/>
    </widget>
    <widget class="QMenu" name="menuJugadas">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Jugadas</string>
     </property>
@@ -1228,6 +1231,38 @@
     <hint type="destinationlabel">
      <x>406</x>
      <y>259</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionLimpar</sender>
+   <signal>triggered()</signal>
+   <receiver>pbtLimpiar</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>777</x>
+     <y>484</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionGuardar</sender>
+   <signal>triggered()</signal>
+   <receiver>pbtGuardar</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>722</x>
+     <y>484</y>
     </hint>
    </hints>
   </connection>
