Modificado el nombre el QGroupBox de la valoración

--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -956,7 +956,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QGroupBox" name="grbValoracion">
     <property name="geometry">
      <rect>
       <x>10</x>
